--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Experimenting with AR on the mobile Web using [getUserMedia](https://developer.mozilla.org/en-US/docs/Web/API/MediaDevices/getUserMedia) and [A-Frame](https://aframe.io/), the declarative VR library from Mozilla.",
   "main": "aframe.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
